Transform Our Process into vertical timeline layout

--- a/about.html
+++ b/about.html
@@ -144,44 +144,109 @@
                 style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
                 Our Process</h2>
             <p class="section-intro"
-                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 700px; margin: 0 auto var(--spacing-xl); line-height: 1.8;">
+                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 700px; margin: 0 auto var(--spacing-2xl); line-height: 1.8;">
                 A clear workflow from initial contact to project completion.</p>
 
-            <div class="option-grid-large">
-                <div class="option-card-large">
-                    <h3>1. Initial Contact</h3>
-                    <p>Reach out via WhatsApp or contact form. Share photos of the space and describe your vision. We'll
-                        assess suitability before scheduling.</p>
+            <!-- Timeline Container -->
+            <div style="max-width: 900px; margin: 0 auto; position: relative;">
+                <!-- Vertical Line -->
+                <div
+                    style="position: absolute; left: 50%; top: 0; bottom: 0; width: 3px; background: linear-gradient(to bottom, #d8d4c8, #e6e2d6); transform: translateX(-50%); z-index: 0;">
                 </div>
 
-                <div class="option-card-large">
-                    <h3>2. Site Evaluation</h3>
-                    <p>We visit the site to assess substrate conditions, measure surfaces, and discuss material options.
-                        This is not a sales call—unsuitable projects are declined.</p>
+                <!-- Step 1 -->
+                <div
+                    style="position: relative; display: flex; align-items: center; margin-bottom: var(--spacing-xl); z-index: 1;">
+                    <div style="flex: 1; text-align: right; padding-right: var(--spacing-lg);">
+                        <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--color-text-primary);">1.
+                            Initial Contact</h3>
+                        <p style="color: var(--color-text-secondary); line-height: 1.7;">Reach out via WhatsApp or
+                            contact form. Share photos of the space and describe your vision. We'll assess suitability
+                            before scheduling.</p>
+                    </div>
+                    <div
+                        style="width: 50px; height: 50px; background: #2c2c2c; border: 4px solid #e6e2d6; border-radius: 50%; flex-shrink: 0; display: flex; align-items: center; justify-content: center; font-weight: 600; color: #e6e2d6; font-size: 1.3rem;">
+                        1</div>
+                    <div style="flex: 1;"></div>
                 </div>
 
-                <div class="option-card-large">
-                    <h3>3. Sample Approval</h3>
-                    <p>For plaster and textured finishes, we prepare sample boards for your approval. Once approved, the
-                        sample becomes the reference standard.</p>
+                <!-- Step 2 -->
+                <div
+                    style="position: relative; display: flex; align-items: center; margin-bottom: var(--spacing-xl); z-index: 1;">
+                    <div style="flex: 1;"></div>
+                    <div
+                        style="width: 50px; height: 50px; background: #2c2c2c; border: 4px solid #e6e2d6; border-radius: 50%; flex-shrink: 0; display: flex; align-items: center; justify-content: center; font-weight: 600; color: #e6e2d6; font-size: 1.3rem;">
+                        2</div>
+                    <div style="flex: 1; text-align: left; padding-left: var(--spacing-lg);">
+                        <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--color-text-primary);">2. Site
+                            Evaluation</h3>
+                        <p style="color: var(--color-text-secondary); line-height: 1.7;">We visit the site to assess
+                            substrate conditions, measure surfaces, and discuss material options. This is not a sales
+                            call—unsuitable projects are declined.</p>
+                    </div>
                 </div>
 
-                <div class="option-card-large">
-                    <h3>4. Quotation</h3>
-                    <p>After evaluation, we provide a detailed quote covering materials, labor, substrate prep, and
-                        timeline. No surprises, no hidden costs.</p>
+                <!-- Step 3 -->
+                <div
+                    style="position: relative; display: flex; align-items: center; margin-bottom: var(--spacing-xl); z-index: 1;">
+                    <div style="flex: 1; text-align: right; padding-right: var(--spacing-lg);">
+                        <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--color-text-primary);">3.
+                            Sample Approval</h3>
+                        <p style="color: var(--color-text-secondary); line-height: 1.7;">For plaster and textured
+                            finishes, we prepare sample boards for your approval. Once approved, the sample becomes the
+                            reference standard.</p>
+                    </div>
+                    <div
+                        style="width: 50px; height: 50px; background: #2c2c2c; border: 4px solid #e6e2d6; border-radius: 50%; flex-shrink: 0; display: flex; align-items: center; justify-content: center; font-weight: 600; color: #e6e2d6; font-size: 1.3rem;">
+                        3</div>
+                    <div style="flex: 1;"></div>
                 </div>
 
-                <div class="option-card-large">
-                    <h3>5. Application</h3>
-                    <p>Work is scheduled with clear timelines. We manage substrate preparation, material application,
-                        and site cleanup. Expect 2-4 days for most residential rooms.</p>
+                <!-- Step 4 -->
+                <div
+                    style="position: relative; display: flex; align-items: center; margin-bottom: var(--spacing-xl); z-index: 1;">
+                    <div style="flex: 1;"></div>
+                    <div
+                        style="width: 50px; height: 50px; background: #2c2c2c; border: 4px solid #e6e2d6; border-radius: 50%; flex-shrink: 0; display: flex; align-items: center; justify-content: center; font-weight: 600; color: #e6e2d6; font-size: 1.3rem;">
+                        4</div>
+                    <div style="flex: 1; text-align: left; padding-left: var(--spacing-lg);">
+                        <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--color-text-primary);">4.
+                            Quotation</h3>
+                        <p style="color: var(--color-text-secondary); line-height: 1.7;">After evaluation, we provide a
+                            detailed quote covering materials, labor, substrate prep, and timeline. No surprises, no
+                            hidden costs.</p>
+                    </div>
                 </div>
 
-                <div class="option-card-large">
-                    <h3>6. Final Walkthrough</h3>
-                    <p>We conduct a final walkthrough to review the finish, answer questions, and provide care
-                        instructions. Warranty coverage begins upon completion.</p>
+                <!-- Step 5 -->
+                <div
+                    style="position: relative; display: flex; align-items: center; margin-bottom: var(--spacing-xl); z-index: 1;">
+                    <div style="flex: 1; text-align: right; padding-right: var(--spacing-lg);">
+                        <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--color-text-primary);">5.
+                            Application</h3>
+                        <p style="color: var(--color-text-secondary); line-height: 1.7;">Work is scheduled with clear
+                            timelines. We manage substrate preparation, material application, and site cleanup. Expect
+                            2-4 days for most residential rooms.</p>
+                    </div>
+                    <div
+                        style="width: 50px; height: 50px; background: #2c2c2c; border: 4px solid #e6e2d6; border-radius: 50%; flex-shrink: 0; display: flex; align-items: center; justify-content: center; font-weight: 600; color: #e6e2d6; font-size: 1.3rem;">
+                        5</div>
+                    <div style="flex: 1;"></div>
+                </div>
+
+                <!-- Step 6 -->
+                <div style="position: relative; display: flex; align-items: center; z-index: 1;">
+                    <div style="flex: 1;"></div>
+                    <div
+                        style="width: 50px; height: 50px; background: #2c2c2c; border: 4px solid #e6e2d6; border-radius: 50%; flex-shrink: 0; display: flex; align-items: center; justify-content: center; font-weight: 600; color: #e6e2d6; font-size: 1.3rem;">
+                        6</div>
+                    <div style="flex: 1; text-align: left; padding-left: var(--spacing-lg);">
+                        <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--color-text-primary);">6. Final
+                            Walkthrough</h3>
+                        <p style="color: var(--color-text-secondary); line-height: 1.7;">We conduct a final walkthrough
+                            to review the finish, answer questions, and provide care instructions. Warranty coverage
+                            begins upon completion.</p>
+                    </div>
                 </div>
             </div>
         </div>
