--- a/faq.html
+++ b/faq.html
@@ -36,13 +36,10 @@
             </button>
 
             <nav class="nav-links">
-                <a href="about.html">About Us</a>
-                <a href="index.html#services">Services</a>
-                <a href="#gallery">Gallery</a>
-                <a href="faq.html">FAQ</a>
-                <a href="index.html#contact">Contact</a>
-                <a href="index.html#contact" class="btn" style="padding: 0.5rem 1.5rem; font-size: 0.8rem;">Get
-                    Quote</a>
+                <a href="index.html#systems">Systems</a>
+                <a href="index.html#process">Process</a>
+                <a href="faq.html" class="active">FAQ</a>
+                <a href="index.html#contact" class="btn btn-small">Request Consultation</a>
             </nav>
         </div>
     </header>
@@ -293,7 +290,8 @@
     <footer style="background: #2c2c2c; color: #e6e2d6; padding: 4rem 0;">
         <div class="container text-center">
             <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Project</h3>
-            <p style="opacity: 0.7; margin-bottom: 2rem;">bringing texture to life in Singapore.</p>
+            <p style="opacity: 0.7; margin-bottom: 2rem;">Designing and executing architectural surface systems in
+                Singapore.</p>
             <div style="opacity: 0.5; font-size: 0.9rem;">
                 &copy; 2026 Surface Project. All rights reserved.
             </div>
