fix: update navigation links and anchors across site

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
             <nav class="nav-links">
                 <a href="#services">Systems</a>
-                <a href="about.html">About Us</a>
-                <a href="#faq">FAQ</a>
-                <a href="#contact" class="btn" style="padding: 0.5rem 1.5rem; font-size: 0.8rem;">Consultation</a>
+                <a href="#process">Process</a>
+                <a href="faq.html">FAQ</a>
+                <a href="#contact" class="btn btn-small">Consultation</a>
             </nav>
         </div>
     </header>
@@ -92,7 +92,7 @@
     </section>
 
     <!-- Surface Systems (Topical Authority) -->
-    <section id="services" class="services-section section-padding">
+    <section id="systems" class="services-section section-padding">
         <div class="container">
             <div class="text-center mb-lg section-title">
                 <h2>Surface Systems</h2>
@@ -197,7 +197,7 @@
     </section>
 
     <!-- How We Work Section -->
-    <section class="section-padding">
+    <section id="process" class="section-padding">
         <div class="container">
             <div class="text-center mb-lg">
                 <h2>How We Work</h2>
