feat: add 'More FAQ' button to landing page FAQ section

--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
                     <p>No. Scaffolding and access systems are assessed and quoted separately.</p>
                 </div>
             </div>
+            <div class="text-center mt-lg">
+                <a href="faq.html" class="btn btn-small">More FAQ</a>
+            </div>
         </div>
     </section>
 
