feat: harden FAQ content with defensive liability and refund clauses

--- a/faq.html
+++ b/faq.html
@@ -137,43 +137,56 @@
         </div>
     </section>
 
-    <!-- FAQ Section 4: Pricing -->
+    <!-- FAQ Section 4: Policies & Liability -->
     <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
         <div class="container">
-            <h2>Pricing & Quotation</h2>
+            <h2>Policies & Liability</h2>
 
             <div class="faq-container">
                 <div class="faq-item">
-                    <h3>Why don't you show prices online?</h3>
-                    <p>Decorative finishes vary significantly based on surface condition, area, and system. Accurate
-                        pricing requires evaluation to avoid under- or over-specification.</p>
+                    <h3>What is your refund policy?</h3>
+                    <p>Mineral and decorative surface systems are bespoke, hand-applied works. Once the application
+                        process
+                        begins (surface preparation or material mixing), the project is <strong>strictly
+                            non-refundable</strong>. Cancellations after material procurement but before application
+                        will incur a restocking and administrative fee.</p>
                 </div>
 
                 <div class="faq-item">
-                    <h3>Is the quotation final?</h3>
-                    <p>Quotations are based on evaluated conditions. Any changes to scope or surface condition may
-                        require adjustment.</p>
+                    <h3>Are you liable for failures caused by the building?</h3>
+                    <p>No. Surface Project is not liable for failures caused by structural defects, water ingress from
+                        window frames, rising damp from slabs, or leaking pipes discovered after our initial assessment.
+                        Surface systems are finishes, not structural waterproofing repairs.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>What happens if I change my mind about the texture?</h3>
+                    <p>Texture and tonal movement are agreed upon during the sampling/mock-up phase. If the client
+                        requests a change after application has started, this is classified as a change in scope and
+                        will be <strong>fully chargeable</strong> at current rates.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- FAQ Section 5: Maintenance -->
+    <!-- FAQ Section 5: Maintenance & Touch-ups -->
     <section class="detail-content-section section-padding" style="background: var(--color-white);">
         <div class="container">
-            <h2>Touch-ups, Maintenance & Warranty</h2>
+            <h2>Touch-ups & Maintenance</h2>
 
             <div class="faq-container">
                 <div class="faq-item">
-                    <h3>Do you provide touch-ups?</h3>
-                    <p>Touch-ups are assessed on a case-by-case basis. Minor adjustments related to application are
-                        handled during final inspection.</p>
+                    <h3>Do you provide free touch-ups?</h3>
+                    <p>Only for application-related defects identified during the final site handover. Any damage caused
+                        after handover by furniture movement, other contractors (e.g. electrical/plumbing), cleaning
+                        chemicals, or general wear is <strong>strictly chargeable</strong>.</p>
                 </div>
 
                 <div class="faq-item">
-                    <h3>How durable are these finishes?</h3>
-                    <p>Durability depends on material selection, application area, and maintenance. Mineral finishes are
-                        not maintenance-free and age naturally over time.</p>
+                    <h3>Can a single spot be patched perfectly?</h3>
+                    <p>Mineral finishes are seamless. Small patches may remain visible due to the hand-applied nature of
+                        the material. To achieve a perfectly seamless result after damage, we may recommend re-coating
+                        the entire wall from corner to corner at the client's expense.</p>
                 </div>
             </div>
         </div>
@@ -274,9 +287,15 @@
 
             <div class="faq-container">
                 <div class="faq-item">
-                    <h3>Who are these finishes not suitable for?</h3>
-                    <p>Clients expecting mass-produced uniformity, zero variation, or heavy abrasion resistance should
-                        consider alternative paint systems.</p>
+                    <h3>Who is Surface Project NOT suitable for?</h3>
+                    <p>Our systems are not suitable for clients expecting plastic-like uniformity, zero natural
+                        variation, or those looking for the cheapest possible quote regardless of environment. We
+                        specialize in high-performance, artisanal surface systems for informed clients.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Do you accept "unlimited" revisions?</h3>
+                    <p>No. Visual outcomes are locked in via approved samples. On-site "trial and error" during
+                        application is not permitted and will incur additional system costs.</p>
                 </div>
             </div>
 
