--- a/index.html
+++ b/index.html
@@ -253,32 +253,34 @@
             <div class="faq-container">
                 <div class="faq-item">
                     <h3>Is lime paint suitable for Singapore’s humidity?</h3>
-                    <p>Yes, when specified correctly. Lime paint is breathable and reduces trapped moisture, but it
-                        cannot compensate for leaks, rising damp, or wet substrates.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Do you do normal painting?</h3>
-                    <p>Yes — when it is the correct solution. We treat conventional paint as a system, not a shortcut.
+                    <p>Yes, when specified correctly. However, surface systems are not a substitute for structural
+                        waterproofing. We are not liable for failures caused by existing building leaks or rising damp.
                     </p>
                 </div>
                 <div class="faq-item">
-                    <h3>Do you do industrial epoxy and waterproofing?</h3>
-                    <p>Yes. We specify epoxy, polyurethane, and waterproofing systems where mineral finishes are
-                        unsuitable.</p>
+                    <h3>What is your refund policy?</h3>
+                    <p>As our systems are bespoke and hand-applied, projects are strictly non-refundable once surface
+                        preparation or application has commenced.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Do you provide warranty for touch-ups?</h3>
+                    <p>We provide a handover warranty for application defects. Any damage post-handover (moving,
+                        cleaning, other contractors) is strictly chargeable at current rates.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Can you match reference images exactly?</h3>
-                    <p>No. Reference images guide direction only. Hand-applied and reactive systems cannot be replicated
-                        exactly.</p>
+                    <p>No. Reference images are for tone direction only. Natural variation, tonal shifts, and hand
+                        strokes are material properties and are not classified as defects.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Do you do graffiti-style murals?</h3>
-                    <p>We provide spray-applied graphic and mural systems for approved projects. We do not reproduce
-                        copyrighted or unauthorised street art.</p>
+                    <h3>What if I want a perfectly uniform finish?</h3>
+                    <p>Mineral and artisanal finishes are inherently non-uniform. If you require zero variation, our
+                        systems are <strong>not suitable</strong> for your project.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Is scaffolding included?</h3>
-                    <p>No. Scaffolding and access systems are assessed and quoted separately.</p>
+                    <p>No. Scaffolding, boom lifts, and height access systems are assessed and quoted as separate,
+                        non-negotiable line items.</p>
                 </div>
             </div>
             <div class="text-center mt-lg">
