feat: add defensive architectural paint FAQ to manage expectations for standard services

--- a/faq.html
+++ b/faq.html
@@ -106,6 +106,13 @@
                     <p>Most mineral systems are breathable and low-VOC. Suitability depends on application area and
                         substrate.</p>
                 </div>
+                <div class="faq-item">
+                    <h3>Do you do 'normal' painting?</h3>
+                    <p>We do not provide 'standard' or budget painting. We execute <strong>Architectural Paint
+                            Systems</strong>. This includes moisture assessment, substrate-specific priming, and
+                        multi-layer execution. If you are seeking a 'cheap lick of paint' without technical oversight,
+                        our services are not a match.</p>
+                </div>
             </div>
         </div>
     </section>
