--- a/index.html
+++ b/index.html
@@ -282,6 +282,12 @@
                     <p>No. Scaffolding, boom lifts, and height access systems are assessed and quoted as separate,
                         non-negotiable line items.</p>
                 </div>
+                <div class="faq-item">
+                    <h3>Do you do 'normal' painting?</h3>
+                    <p>We do not provide budget painting. We execute <strong>Architectural Paint Systems</strong> which
+                        include moisture testing and specific priming. If you want a cheap 'lick of paint', we are not
+                        the right partner.</p>
+                </div>
             </div>
             <div class="text-center mt-lg">
                 <a href="faq.html" class="btn btn-small">More FAQ</a>
