feat: add detailed defensive FAQs for all 9 surface systems to manage client expectations

--- a/faq.html
+++ b/faq.html
@@ -117,6 +117,67 @@
         </div>
     </section>
 
+    <!-- FAQ Section 2.5: Surface System Specifics -->
+    <section class="detail-content-section section-padding" style="background: var(--color-bg-primary);">
+        <div class="container">
+            <h2>Surface System Specifics</h2>
+
+            <div class="faq-container">
+                <div class="faq-item">
+                    <h3>Lime Paint: Will the colour be 100% solid?</h3>
+                    <p>No. Lime paint is a mineral finish that creates 'clouding' or tonal movement. If you want a
+                        perfectly flat, plastic-look solid colour, you should choose a standard acrylic paint (which we
+                        do not prioritize).</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Lime Plaster: Are the texture marks flaws?</h3>
+                    <p>No. Hand-applied plaster marks are the intentional signature of the artisan. We do not provide
+                        'machine-smooth' mineral plaster. If you desire zero texture, this system is not for you.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Microcement: Is it indestructible?</h3>
+                    <p>No. While highly durable, microcement can crack if the building structure moves or if heavy
+                        objects are dropped. It is a premium skin, not a structural reinforcement.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Liquid Metal: Why is the colour changing?</h3>
+                    <p>Liquid metal contains real metal particles that <strong>will oxidise and patina</strong> over
+                        time. This is a natural reaction to the environment and is considered a feature, not a defect.
+                    </p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Patina & Oxidised: Can you control the exact rust pattern?</h3>
+                    <p>No. Reactive finishes are inherently unpredictable. We guide the direction, but the final pattern
+                        is a result of material behaviour. No two walls will ever be the same.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Industrial Epoxy: Will it look like a decorative floor?</h3>
+                    <p>Our industrial systems prioritize <strong>function over decoration</strong>. While they look
+                        clean and professional, they are specified for chemical and abrasion resistance, not as a
+                        decorative 'showroom' finish.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Waterproofing: Does it fix existing structural leaks?</h3>
+                    <p>No. Waterproofing systems prevent surface penetration; they do not fix cracked pipes or
+                        structural slab failures. Structural issues must be resolved by a specialist before our
+                        application.</p>
+                </div>
+
+                <div class="faq-item">
+                    <h3>Custom Murals: Can I change the design on-site?</h3>
+                    <p>No. Designs are locked in during the mock-up phase. Any on-site changes to approved graphics will
+                        halt production and be fully chargeable as a new project scope.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- FAQ Section 3: Process & Site -->
     <section class="detail-content-section section-padding" style="background: var(--color-white);">
         <div class="container">
